--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -10,6 +10,8 @@ tokio = { version = "1.21.2", features = ["full"] }
 bpaf = { version = "0.7.2", features = ["autocomplete", "derive"] }
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
+diamond-types = { version = "1.0.0", path = "../../diamond-types", features = ["serde"] }
+smallvec = { version = "1.10.0", features = ["serde", "union", "const_generics"] }
 
 
 [features]
