--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -12,7 +12,8 @@ serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 diamond-types = { version = "1.0.0", path = "../../diamond-types", features = ["serde"] }
 smallvec = { version = "1.10.0", features = ["serde", "union", "const_generics"] }
-
+smartstring = "1.0.1"
+rand = "0.8.5"
 
 [features]
 default = ["dull-color"]
