--- a/rs/crates/replica-swift/Cargo.toml
+++ b/rs/crates/replica-swift/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["staticlib"]
 
 [build-dependencies]
 cbindgen = "0.24.3"
+swift-bridge-build = "0.1.41"
 
 [dependencies]
 #swift-bridge = { version = "0.1.41", features = ["async"] }
