--- a/rs/crates/replica-swift/Cargo.toml
+++ b/rs/crates/replica-swift/Cargo.toml
@@ -20,3 +20,4 @@ swift-bridge = "0.1.41"
 tokio = { version = "1.21.2", features = ["full"] }
 replica = { path = "../.." }
 diamond-types = { version = "1.0.0", path = "../../../../diamond-types", features = ["serde"] }
+jumprope = { version = "1.1.1", features = ["wchar_conversion"] }
