--- a/crates/replica-swift/Cargo.toml
+++ b/crates/replica-swift/Cargo.toml
@@ -19,5 +19,5 @@ swift-bridge = "0.1.41"
 #rand = { version = "0.8.5" }
 tokio = { version = "1.21.2", features = ["full"] }
 replica = { path = "../.." }
-diamond-types = { version = "1.0.0", path = "../../../../diamond-types", features = ["serde"] }
+diamond-types = { version = "1.0.0", path = "../../../diamond-types", features = ["serde"] }
 jumprope = { version = "1.1.1", features = ["wchar_conversion"] }
